[package]
name = "window"
version = "0.1.0"
edition = "2021"

[features]
profile = ["mini/profile"]
info = ["mini/info"]
warn = ["mini/warn"]
error = ["mini/error"]

[dependencies]
# This is compiled out when the flags are not enabled.
# TODO: Look into making this optional
mini = { git = "https://github.com/zx3no/mini", version = "0.1.0" }

# winapi = { version = "0.3.9", features = ["ntdef", "synchapi"] }
# windows = { version = "0.59.0", features = ["Win32_System_Threading"] }
